--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
-layout: home
-title: 
+layout: default
+title: Home
 ---
 
-HI!
+<h1>
+    {{ page.title }}
+</h1>
 
-This is me
-
-# fun times
+{{ content }}
